# 4CHAN_DOWNLOADER

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
FOURCHAN_DOWNLOADER/: Cargo.toml
FOURCHAN_DOWNLOADER/src/: main.rs
src/: a.out  curses.cpp  main.cpp  main.rs
