[package]
name = "FOURCHAN_DOWNLOADER"
version = "0.1.0"
authors = ["Romeu Vieira <romeu.bizz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
# fourchan-sdk = { git = "https://github.com/RomeuG/4chan-sdk" }
fourchan-sdk = { path = "../4chan-sdk" }
reqwest = { version = "0.11.4", features = ["blocking", "json"]}
